# MiniExchange

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  main.py  miniexchange.lua  offlineMain.cpp  run.sh  summary.csv  test.py
config/: config.json  default_config.json
docs/: MiniExchange-wire-spec.md  build-help.md  market-data-spec.md  reference_api_requests.json  wire-spec.md
include/api/: api.hpp  engineView.hpp
include/auth/: session.hpp  sessionManager.hpp
include/client/: client.hpp  clientNetwork.hpp  clientRunner.hpp  mdReceiver.hpp  networkClient.hpp  tradingClient.hpp
include/core/: matchingEngine.hpp  order.hpp  service.hpp  trade.hpp
include/events/: eventBus.hpp  events.hpp
include/gateway/: gateway.hpp
include/logger/: addLogger.hpp  eventLogger.hpp  logger.hpp
include/market-data/: MDPublisher.hpp  bookEvent.hpp  messages.hpp  observer.hpp  serialization.hpp  udpMulticastTransport.hpp
include/network/: networkHandler.hpp
include/protocol/: clientMessages.hpp  messages.hpp  protocolHandler.hpp  protocolTypes.hpp  sendFunctions.hpp  serialize.hpp  serverMessages.hpp  statusCodes.hpp  traits.hpp
include/protocol/client/: clientMessageFactory.hpp  clientMessages.hpp
include/protocol/server/: serverMessageFactory.hpp  serverMessages.hpp
include/server/: clients.hpp  connection.hpp  connectionManager.hpp  offlineServer.cpp  server.hpp
include/sessions/: clientSession.hpp  session.hpp  sessionManager.hpp
include/tests/: observerTests.hpp
include/utils/: endian.hpp  orderBookRenderer.hpp  orderBuilder.hpp  randomGenerator.hpp  sharedRegion.hpp  spsc_queue.hpp  stats.hpp  status.hpp  timing.hpp  types.hpp  utils.hpp
py/: build_helper.py  client.py  configure.py  pyClient.py  py_client.py  timings_processer.py
py/analytics/: config.py  data_streamer.py  loader.py  test_loader.py
scripts/: configure.py  pyClient.py
scripts/analytics/: data_streamer.py  events.py  latencies.py  loader.py  messages.py
src/: api.py  client_main.cpp  dispatcher.py  events.py  feeds.py  foo.cpp  logger.py  main.cpp  order.py  order_book.py  trade.py
src/api/: api.cpp  api.py  dispatcher.py  validators.py
src/auth/: sessionManager.cpp  session_manager.py
src/cli/: cli.py
src/client/: client.cpp  clientMain.cpp  mdReceiver.cpp  networkClient.cpp  testClient.cpp  tradingClient.cpp
src/core/: matchingEngine.cpp  order.py  order_book.py  trade.py
src/feeds/: events.py  feeds.py
src/gateway/: gateway.cpp
src/logging/: logger.py
src/market-data/: mdPublisher.cpp  observer.cpp  udpMulticastTransport.cpp
src/network/: networkHandler.cpp
src/protocol/: protocolHandler.cpp
src/py/: pyClient.cpp
src/runner/: clientRunnerMain.cpp
src/server/: server.cpp
tests/: CMakeLists.txt  bulk_test.py  core_tests.cpp  engineObserverParity.cpp  engineTests.cpp  messageHandlingTests.cpp  paramObserverTests.cpp  protocolHandlingTests.cpp  protocolTests.cpp  reflectionTests.cpp  test_api.py  test_book.py  test_cancel.py  test_order_validation.py  test_orders.py
tests/bulk_testing/: csv_testing.py  generate_fuzz.py
tests/bulk_testing/csvs/: benchmark_deep_book.csv  benchmark_no_print.csv  benchmark_results.csv  benchmark_results5.csv  benchmark_shallow_book.csv  bulk_reference.csv  summary.ipynb
